cmake_minimum_required(VERSION 3.8)
project(hifrog)

set(CMAKE_CXX_STANDARD 11)

message(${CMAKE_BINARY_DIR})

include_directories(
        ${CMAKE_SOURCE_DIR}
        ${CMAKE_SOURCE_DIR}/util
)

set(SOURCE_FILES
        analyses/ai.cpp
        analyses/ai.h
        analyses/call_graph.cpp
        analyses/call_graph.h
        analyses/cfg_dominators.h
        analyses/constant_propagator.cpp
        analyses/constant_propagator.h
        analyses/custom_bitvector_analysis.cpp
        analyses/custom_bitvector_analysis.h
        analyses/dependence_graph.cpp
        analyses/dependence_graph.h
        analyses/dirty.cpp
        analyses/dirty.h
        analyses/does_remove_const.cpp
        analyses/does_remove_const.h
        analyses/escape_analysis.cpp
        analyses/flow_insensitive_analysis.cpp
        analyses/flow_insensitive_analysis.h
        analyses/global_may_alias.cpp
        analyses/global_may_alias.h
        analyses/goto_check.cpp
        analyses/goto_check.h
        analyses/goto_rw.cpp
        analyses/escape_analysis.h
        analyses/goto_rw.h
        analyses/interval_analysis.cpp
        analyses/interval_analysis.h
        analyses/interval_domain.cpp
        analyses/interval_domain.h
        analyses/interval_template.h
        analyses/invariant_propagation.cpp
        analyses/invariant_propagation.h
        analyses/invariant_set.cpp
        analyses/invariant_set.h
        analyses/invariant_set_domain.cpp
        analyses/invariant_set_domain.h
        analyses/is_threaded.cpp
        analyses/is_threaded.h
        analyses/local_bitvector_analysis.cpp
        analyses/local_bitvector_analysis.h
        analyses/local_cfg.cpp
        analyses/local_cfg.h
        analyses/local_may_alias.cpp
        analyses/local_may_alias.h
        analyses/locals.cpp
        analyses/locals.h
        analyses/natural_loops.cpp
        analyses/natural_loops.h
        analyses/reaching_definitions.cpp
        analyses/reaching_definitions.h
        analyses/replace_symbol_ext.cpp
        analyses/replace_symbol_ext.h
        analyses/static_analysis.cpp
        analyses/static_analysis.h
        analyses/uninitialized_domain.cpp
        analyses/uninitialized_domain.h
        #ansi-c/library/cegis.c
        #ansi-c/library/converter.cpp
        #ansi-c/library/cprover.h
        #ansi-c/library/ctype.c
        #ansi-c/library/err.c
        #ansi-c/library/errno.c
        #ansi-c/library/fcntl.c
        #ansi-c/library/fenv.c
        #ansi-c/library/float.c
        #ansi-c/library/gcc.c
        #ansi-c/library/getopt.c
        #ansi-c/library/inet.c
        #ansi-c/library/intrin.c
        #ansi-c/library/java.io.c
        #ansi-c/library/jsa.h
        #ansi-c/library/locale.c
        #ansi-c/library/math.c
        #ansi-c/library/netdb.c
        #ansi-c/library/new.c
        #ansi-c/library/noop.c
        #ansi-c/library/process.c
        #ansi-c/library/pthread_lib.c
        #ansi-c/library/semaphore.c
        #ansi-c/library/setjmp.c
        #ansi-c/library/signal.c
        #ansi-c/library/stdio.c
        #ansi-c/library/stdlib.c
        #ansi-c/library/string.c
        #ansi-c/library/strings.c
        #ansi-c/library/syslog.c
        #ansi-c/library/threads.c
        #ansi-c/library/time.c
        #ansi-c/library/unistd.c
        #ansi-c/library/windows.c
        #ansi-c/library/x86_assembler.c
        ansi-c/literals/convert_character_literal.cpp
        ansi-c/literals/convert_character_literal.h
        ansi-c/literals/convert_float_literal.cpp
        ansi-c/literals/convert_float_literal.h
        ansi-c/literals/convert_integer_literal.cpp
        ansi-c/literals/convert_integer_literal.h
        ansi-c/literals/convert_string_literal.cpp
        ansi-c/literals/convert_string_literal.h
        ansi-c/literals/parse_float.cpp
        ansi-c/literals/parse_float.h
        ansi-c/literals/unescape_string.cpp
        ansi-c/literals/unescape_string.h
        ansi-c/anonymous_member.cpp
        ansi-c/anonymous_member.h
        ansi-c/ansi_c_convert_type.cpp
        ansi-c/ansi_c_convert_type.h
        ansi-c/ansi_c_declaration.cpp
        ansi-c/ansi_c_declaration.h
        ansi-c/ansi_c_entry_point.cpp
        ansi-c/ansi_c_entry_point.h
        ansi-c/ansi_c_internal_additions.cpp
        ansi-c/ansi_c_internal_additions.h
        ansi-c/ansi_c_language.cpp
        ansi-c/ansi_c_language.h
        ansi-c/ansi_c_lex.yy.cpp
        ansi-c/ansi_c_parse_tree.cpp
        ansi-c/ansi_c_parse_tree.h
        ansi-c/ansi_c_parser.cpp
        ansi-c/ansi_c_parser.h
        ansi-c/ansi_c_scope.cpp
        ansi-c/ansi_c_scope.h
        ansi-c/ansi_c_typecheck.cpp
        ansi-c/ansi_c_typecheck.h
        ansi-c/ansi_c_y.tab.cpp
        ansi-c/ansi_c_y.tab.h
        ansi-c/arm_builtin_headers.h
        ansi-c/c_misc.cpp
        ansi-c/c_misc.h
        ansi-c/c_nondet_symbol_factory.cpp
        ansi-c/c_nondet_symbol_factory.h
        ansi-c/c_preprocess.cpp
        ansi-c/c_preprocess.h
        ansi-c/c_qualifiers.cpp
        ansi-c/c_qualifiers.h
        ansi-c/c_sizeof.cpp
        ansi-c/c_sizeof.h
        ansi-c/c_storage_spec.cpp
        ansi-c/c_storage_spec.h
        ansi-c/c_typecast.cpp
        ansi-c/c_typecast.h
        ansi-c/c_typecheck_argc_argv.cpp
        ansi-c/c_typecheck_base.cpp
        ansi-c/c_typecheck_base.h
        ansi-c/c_typecheck_code.cpp
        ansi-c/c_typecheck_expr.cpp
        ansi-c/c_typecheck_initializer.cpp
        ansi-c/c_typecheck_type.cpp
        ansi-c/c_typecheck_typecast.cpp
        ansi-c/clang_builtin_headers.h
        ansi-c/cprover_library.cpp
        ansi-c/cprover_library.h
        ansi-c/cw_builtin_headers.h
        ansi-c/designator.cpp
        ansi-c/designator.h
        ansi-c/expr2c.cpp
        ansi-c/expr2c.h
        ansi-c/expr2c_class.h
        #ansi-c/file_converter.cpp
        ansi-c/gcc_builtin_headers_alpha.h
        ansi-c/gcc_builtin_headers_arm.h
        ansi-c/gcc_builtin_headers_generic.h
        ansi-c/gcc_builtin_headers_ia32-2.h
        ansi-c/gcc_builtin_headers_ia32-3.h
        ansi-c/gcc_builtin_headers_ia32-4.h
        ansi-c/gcc_builtin_headers_ia32.h
        ansi-c/gcc_builtin_headers_math.h
        ansi-c/gcc_builtin_headers_mem_string.h
        ansi-c/gcc_builtin_headers_mips.h
        ansi-c/gcc_builtin_headers_omp.h
        ansi-c/gcc_builtin_headers_power.h
        ansi-c/gcc_builtin_headers_tm.h
        ansi-c/gcc_builtin_headers_ubsan.h
        ansi-c/padding.cpp
        ansi-c/padding.h
        ansi-c/preprocessor_line.cpp
        ansi-c/preprocessor_line.h
        ansi-c/printf_formatter.cpp
        ansi-c/printf_formatter.h
        ansi-c/string_constant.cpp
        ansi-c/string_constant.h
        ansi-c/type2name.cpp
        ansi-c/type2name.h
        assembler/assembler_lex.yy.cpp
        assembler/assembler_parser.cpp
        assembler/assembler_parser.h
        big-int/allocainc.h
        big-int/bigint-func.cc
        #big-int/bigint-test.cc
        big-int/bigint.cc
        big-int/bigint.hh
        #cbmc/all_properties.cpp
        #cbmc/all_properties_class.h
        #cbmc/bmc.cpp
        #cbmc/bmc.h
        #cbmc/bmc_cover.cpp
        #cbmc/bv_cbmc.cpp
        #cbmc/bv_cbmc.h
        #cbmc/cbmc_dimacs.cpp
        #cbmc/cbmc_dimacs.h
        #cbmc/cbmc_languages.cpp
        #cbmc/cbmc_main.cpp
        #cbmc/cbmc_parse_options.cpp
        #cbmc/cbmc_parse_options.h
        #cbmc/cbmc_solvers.cpp
        #cbmc/cbmc_solvers.h
        #cbmc/counterexample_beautification.cpp
        #cbmc/counterexample_beautification.h
        #cbmc/fault_localization.cpp
        #cbmc/fault_localization.h
        #cbmc/show_vcc.cpp
        cbmc/symex_bmc.cpp
        cbmc/symex_bmc.h
        #cbmc/symex_coverage.cpp
        #cbmc/symex_coverage.h
        #cbmc/version.h
        #cbmc/xml_interface.cpp
        #cbmc/xml_interface.h
        #clobber/clobber_main.cpp
        #clobber/clobber_parse_options.cpp
        #clobber/clobber_parse_options.h
        cpp/cpp_constructor.cpp
        cpp/cpp_convert_type.cpp
        cpp/cpp_convert_type.h
        cpp/cpp_declaration.cpp
        cpp/cpp_declaration.h
        cpp/cpp_declarator.cpp
        cpp/cpp_declarator.h
        cpp/cpp_declarator_converter.cpp
        cpp/cpp_declarator_converter.h
        cpp/cpp_destructor.cpp
        cpp/cpp_enum_type.cpp
        cpp/cpp_enum_type.h
        cpp/cpp_exception_id.cpp
        cpp/cpp_exception_id.h
        cpp/cpp_id.cpp
        cpp/cpp_id.h
        cpp/cpp_instantiate_template.cpp
        cpp/cpp_internal_additions.cpp
        cpp/cpp_internal_additions.h
        cpp/cpp_is_pod.cpp
        cpp/cpp_item.h
        cpp/cpp_language.cpp
        cpp/cpp_language.h
        cpp/cpp_linkage_spec.h
        cpp/cpp_member_spec.h
        cpp/cpp_name.cpp
        cpp/cpp_name.h
        cpp/cpp_namespace_spec.cpp
        cpp/cpp_namespace_spec.h
        cpp/cpp_parse_tree.cpp
        cpp/cpp_parse_tree.h
        cpp/cpp_parser.cpp
        cpp/cpp_parser.h
        cpp/cpp_scope.cpp
        cpp/cpp_scope.h
        cpp/cpp_scopes.cpp
        cpp/cpp_scopes.h
        cpp/cpp_static_assert.h
        cpp/cpp_storage_spec.h
        cpp/cpp_template_args.h
        cpp/cpp_template_parameter.h
        cpp/cpp_template_type.h
        cpp/cpp_token.h
        cpp/cpp_token_buffer.cpp
        cpp/cpp_token_buffer.h
        cpp/cpp_type2name.cpp
        cpp/cpp_type2name.h
        cpp/cpp_typecast.h
        cpp/cpp_typecheck.cpp
        cpp/cpp_typecheck.h
        cpp/cpp_typecheck_bases.cpp
        cpp/cpp_typecheck_code.cpp
        cpp/cpp_typecheck_compound_type.cpp
        cpp/cpp_typecheck_constructor.cpp
        cpp/cpp_typecheck_conversions.cpp
        cpp/cpp_typecheck_declaration.cpp
        cpp/cpp_typecheck_destructor.cpp
        cpp/cpp_typecheck_enum_type.cpp
        cpp/cpp_typecheck_expr.cpp
        cpp/cpp_typecheck_fargs.cpp
        cpp/cpp_typecheck_fargs.h
        cpp/cpp_typecheck_function.cpp
        cpp/cpp_typecheck_initializer.cpp
        cpp/cpp_typecheck_linkage_spec.cpp
        cpp/cpp_typecheck_method_bodies.cpp
        cpp/cpp_typecheck_namespace.cpp
        cpp/cpp_typecheck_resolve.cpp
        cpp/cpp_typecheck_resolve.h
        cpp/cpp_typecheck_static_assert.cpp
        cpp/cpp_typecheck_template.cpp
        cpp/cpp_typecheck_type.cpp
        cpp/cpp_typecheck_using.cpp
        cpp/cpp_typecheck_virtual_table.cpp
        cpp/cpp_using.h
        cpp/cpp_util.cpp
        cpp/cpp_util.h
        cpp/expr2cpp.cpp
        cpp/expr2cpp.h
        cpp/parse.cpp
        cpp/recursion_counter.h
        cpp/template_map.cpp
        cpp/template_map.h
        #goto-analyzer/goto_analyzer_main.cpp
        #goto-analyzer/goto_analyzer_parse_options.cpp
        #goto-analyzer/goto_analyzer_parse_options.h
        #goto-analyzer/static_analyzer.cpp
        #goto-analyzer/static_analyzer.h
        #goto-analyzer/taint_analysis.cpp
        #goto-analyzer/taint_analysis.h
        #goto-analyzer/taint_parser.cpp
        #goto-analyzer/taint_parser.h
        #goto-analyzer/unreachable_instructions.cpp
        #goto-analyzer/unreachable_instructions.h
        #goto-cc/xml_binaries/read_goto_object.cpp
        #goto-cc/xml_binaries/read_goto_object.h
        #goto-cc/xml_binaries/xml_goto_function.cpp
        #goto-cc/xml_binaries/xml_goto_function.h
        #goto-cc/xml_binaries/xml_goto_function_hashing.cpp
        #goto-cc/xml_binaries/xml_goto_function_hashing.h
        #goto-cc/xml_binaries/xml_goto_program.cpp
        #goto-cc/xml_binaries/xml_goto_program.h
        #goto-cc/xml_binaries/xml_goto_program_hashing.cpp
        #goto-cc/xml_binaries/xml_goto_program_hashing.h
        #goto-cc/xml_binaries/xml_irep_hashing.cpp
        #goto-cc/xml_binaries/xml_irep_hashing.h
        #goto-cc/xml_binaries/xml_symbol.cpp
        #goto-cc/xml_binaries/xml_symbol.h
        #goto-cc/xml_binaries/xml_symbol_hashing.cpp
        #goto-cc/xml_binaries/xml_symbol_hashing.h
        #goto-cc/armcc_cmdline.cpp
        #goto-cc/armcc_cmdline.h
        #goto-cc/armcc_mode.cpp
        #goto-cc/armcc_mode.h
        #goto-cc/as86_cmdline.cpp
        #goto-cc/as86_cmdline.h
        #goto-cc/as_cmdline.cpp
        #goto-cc/as_cmdline.h
        #goto-cc/as_mode.cpp
        #goto-cc/as_mode.h
        #goto-cc/bcc_cmdline.cpp
        #goto-cc/bcc_cmdline.h
        #goto-cc/compile.cpp
        #goto-cc/compile.h
        #goto-cc/cw_mode.cpp
        #goto-cc/cw_mode.h
        #goto-cc/gcc_cmdline.cpp
        #goto-cc/gcc_cmdline.h
        #goto-cc/gcc_mode.cpp
        #goto-cc/gcc_mode.h
        #goto-cc/goto_cc_cmdline.cpp
        #goto-cc/goto_cc_cmdline.h
        #goto-cc/goto_cc_languages.cpp
        #goto-cc/goto_cc_main.cpp
        #goto-cc/goto_cc_mode.cpp
        #goto-cc/goto_cc_mode.h
        #goto-cc/ld_cmdline.cpp
        #goto-cc/ld_cmdline.h
        #goto-cc/ms_cl_cmdline.cpp
        #goto-cc/ms_cl_cmdline.h
        #goto-cc/ms_cl_mode.cpp
        #goto-cc/ms_cl_mode.h
        #goto-diff/change_impact.cpp
        #goto-diff/change_impact.h
        #goto-diff/goto_diff.h
        #goto-diff/goto_diff_base.cpp
        #goto-diff/goto_diff_languages.cpp
        #goto-diff/goto_diff_languages.h
        #goto-diff/goto_diff_main.cpp
        #goto-diff/goto_diff_parse_options.cpp
        #goto-diff/goto_diff_parse_options.h
        #goto-diff/syntactic_diff.cpp
        #goto-diff/syntactic_diff.h
        #goto-diff/unified_diff.cpp
        #goto-diff/unified_diff.h
        #goto-instrument/accelerate/accelerate.cpp
        #goto-instrument/accelerate/accelerate.h
        #goto-instrument/accelerate/acceleration_utils.cpp
        #goto-instrument/accelerate/acceleration_utils.h
        #goto-instrument/accelerate/accelerator.h
        #goto-instrument/accelerate/all_paths_enumerator.cpp
        #goto-instrument/accelerate/all_paths_enumerator.h
        #goto-instrument/accelerate/cone_of_influence.cpp
        #goto-instrument/accelerate/cone_of_influence.h
        #goto-instrument/accelerate/disjunctive_polynomial_acceleration.cpp
        #goto-instrument/accelerate/disjunctive_polynomial_acceleration.h
        #goto-instrument/accelerate/enumerating_loop_acceleration.cpp
        #goto-instrument/accelerate/enumerating_loop_acceleration.h
        #goto-instrument/accelerate/linearize.cpp
        #goto-instrument/accelerate/linearize.h
        #goto-instrument/accelerate/loop_acceleration.h
        #goto-instrument/accelerate/overflow_instrumenter.cpp
        #goto-instrument/accelerate/overflow_instrumenter.h
        #goto-instrument/accelerate/path.cpp
        #goto-instrument/accelerate/path.h
        #goto-instrument/accelerate/path_acceleration.h
        #goto-instrument/accelerate/path_enumerator.h
        #goto-instrument/accelerate/polynomial.cpp
        #goto-instrument/accelerate/polynomial.h
        #goto-instrument/accelerate/polynomial_accelerator.cpp
        #goto-instrument/accelerate/polynomial_accelerator.h
        #goto-instrument/accelerate/sat_path_enumerator.cpp
        #goto-instrument/accelerate/sat_path_enumerator.h
        #goto-instrument/accelerate/scratch_program.cpp
        #goto-instrument/accelerate/scratch_program.h
        #goto-instrument/accelerate/subsumed.h
        #goto-instrument/accelerate/trace_automaton.cpp
        #goto-instrument/accelerate/trace_automaton.h
        #goto-instrument/accelerate/util.cpp
        #goto-instrument/accelerate/util.h
        #goto-instrument/wmm/abstract_event.cpp
        #goto-instrument/wmm/abstract_event.h
        #goto-instrument/wmm/cycle_collection.cpp
        #goto-instrument/wmm/data_dp.cpp
        #goto-instrument/wmm/data_dp.h
        #goto-instrument/wmm/event_graph.cpp
        #goto-instrument/wmm/event_graph.h
        #goto-instrument/wmm/fence.cpp
        #goto-instrument/wmm/fence.h
        #goto-instrument/wmm/goto2graph.cpp
        #goto-instrument/wmm/goto2graph.h
        #goto-instrument/wmm/instrumenter_pensieve.h
        #goto-instrument/wmm/instrumenter_strategies.cpp
        #goto-instrument/wmm/pair_collection.cpp
        #goto-instrument/wmm/shared_buffers.cpp
        #goto-instrument/wmm/shared_buffers.h
        #goto-instrument/wmm/weak_memory.cpp
        #goto-instrument/wmm/weak_memory.h
        #goto-instrument/wmm/wmm.h
        #goto-instrument/alignment_checks.cpp
        #goto-instrument/alignment_checks.h
        #goto-instrument/branch.cpp
        #goto-instrument/branch.h
        #goto-instrument/call_sequences.cpp
        #goto-instrument/call_sequences.h
        #goto-instrument/code_contracts.cpp
        #goto-instrument/code_contracts.h
        #goto-instrument/concurrency.cpp
        #goto-instrument/concurrency.h
        #goto-instrument/count_eloc.cpp
        #goto-instrument/count_eloc.h
        #goto-instrument/cover.cpp
        #goto-instrument/cover.h
        #goto-instrument/document_properties.cpp
        #goto-instrument/document_properties.h
        #goto-instrument/dot.cpp
        #goto-instrument/dot.h
        #goto-instrument/dump_c.cpp
        #goto-instrument/dump_c.h
        #goto-instrument/dump_c_class.h
        goto-instrument/full_slicer.cpp
        goto-instrument/full_slicer.h
        goto-instrument/full_slicer_class.h
        #goto-instrument/function.cpp
        #goto-instrument/function.h
        #goto-instrument/function_modifies.cpp
        #goto-instrument/function_modifies.h
        #goto-instrument/goto_instrument_languages.cpp
        #goto-instrument/goto_instrument_main.cpp
        #goto-instrument/goto_instrument_parse_options.cpp
        #goto-instrument/goto_instrument_parse_options.h
        #goto-instrument/goto_program2code.cpp
        #goto-instrument/goto_program2code.h
        #goto-instrument/havoc_loops.cpp
        #goto-instrument/havoc_loops.h
        #goto-instrument/horn_encoding.cpp
        #goto-instrument/horn_encoding.h
        #goto-instrument/interrupt.cpp
        #goto-instrument/interrupt.h
        #goto-instrument/k_induction.cpp
        #goto-instrument/k_induction.h
        #goto-instrument/loop_utils.cpp
        #goto-instrument/loop_utils.h
        #goto-instrument/mmio.cpp
        #goto-instrument/mmio.h
        #goto-instrument/model_argc_argv.cpp
        #goto-instrument/model_argc_argv.h
        goto-instrument/nondet_static.cpp
        goto-instrument/nondet_static.h
        #goto-instrument/nondet_volatile.cpp
        #goto-instrument/nondet_volatile.h
        #goto-instrument/object_id.cpp
        #goto-instrument/object_id.h
        #goto-instrument/points_to.cpp
        #goto-instrument/points_to.h
        #goto-instrument/race_check.cpp
        #goto-instrument/race_check.h
        #goto-instrument/reachability_slicer.cpp
        #goto-instrument/reachability_slicer.h
        #goto-instrument/reachability_slicer_class.h
        #goto-instrument/remove_function.cpp
        #goto-instrument/remove_function.h
        #goto-instrument/rw_set.cpp
        #goto-instrument/rw_set.h
        #goto-instrument/show_locations.cpp
        #goto-instrument/show_locations.h
        #goto-instrument/skip_loops.cpp
        #goto-instrument/skip_loops.h
        #goto-instrument/stack_depth.cpp
        #goto-instrument/stack_depth.h
        #goto-instrument/thread_instrumentation.cpp
        #goto-instrument/thread_instrumentation.h
        #goto-instrument/undefined_functions.cpp
        #goto-instrument/undefined_functions.h
        #goto-instrument/uninitialized.cpp
        #goto-instrument/uninitialized.h
        #goto-instrument/unwind.cpp
        #goto-instrument/unwind.h
        goto-programs/basic_blocks.cpp
        goto-programs/basic_blocks.h
        goto-programs/builtin_functions.cpp
        goto-programs/cfg.h
        goto-programs/class_hierarchy.cpp
        goto-programs/class_hierarchy.h
        goto-programs/class_identifier.cpp
        goto-programs/class_identifier.h
        goto-programs/compute_called_functions.cpp
        goto-programs/compute_called_functions.h
        goto-programs/destructor.cpp
        goto-programs/destructor.h
        goto-programs/elf_reader.cpp
        goto-programs/elf_reader.h
        goto-programs/format_strings.cpp
        goto-programs/format_strings.h
        goto-programs/goto_asm.cpp
        goto-programs/goto_clean_expr.cpp
        goto-programs/goto_convert.cpp
        goto-programs/goto_convert.h
        goto-programs/goto_convert_class.h
        goto-programs/goto_convert_exceptions.cpp
        goto-programs/goto_convert_function_call.cpp
        goto-programs/goto_convert_functions.cpp
        goto-programs/goto_convert_functions.h
        #goto-programs/goto_convert_new_switch_case.cpp
        goto-programs/goto_convert_side_effect.cpp
        goto-programs/goto_functions.cpp
        goto-programs/goto_functions.h
        goto-programs/goto_functions_template.h
        goto-programs/goto_inline.cpp
        goto-programs/goto_inline.h
        goto-programs/goto_inline_class.cpp
        goto-programs/goto_inline_class.h
        goto-programs/goto_model.h
        goto-programs/goto_program.cpp
        goto-programs/goto_program.h
        goto-programs/goto_program_irep.cpp
        goto-programs/goto_program_irep.h
        goto-programs/goto_program_template.cpp
        goto-programs/goto_program_template.h
        goto-programs/goto_trace.cpp
        goto-programs/goto_trace.h
        goto-programs/graphml_witness.cpp
        goto-programs/graphml_witness.h
        goto-programs/initialize_goto_model.cpp
        goto-programs/initialize_goto_model.h
        goto-programs/interpreter.cpp
        goto-programs/interpreter.h
        goto-programs/interpreter_class.h
        goto-programs/interpreter_evaluate.cpp
        goto-programs/json_goto_trace.cpp
        goto-programs/json_goto_trace.h
        goto-programs/link_to_library.cpp
        goto-programs/link_to_library.h
        goto-programs/loop_ids.cpp
        goto-programs/loop_ids.h
        goto-programs/mm_io.cpp
        goto-programs/mm_io.h
        goto-programs/osx_fat_reader.cpp
        goto-programs/osx_fat_reader.h
        goto-programs/parameter_assignments.cpp
        goto-programs/parameter_assignments.h
        goto-programs/pointer_arithmetic.cpp
        goto-programs/pointer_arithmetic.h
        goto-programs/property_checker.cpp
        goto-programs/property_checker.h
        goto-programs/read_bin_goto_object.cpp
        goto-programs/read_bin_goto_object.h
        goto-programs/read_goto_binary.cpp
        goto-programs/read_goto_binary.h
        goto-programs/remove_asm.cpp
        goto-programs/remove_asm.h
        goto-programs/remove_complex.cpp
        goto-programs/remove_complex.h
        goto-programs/remove_const_function_pointers.cpp
        goto-programs/remove_const_function_pointers.h
        goto-programs/remove_exceptions.cpp
        goto-programs/remove_exceptions.h
        goto-programs/remove_function_pointers.cpp
        goto-programs/remove_function_pointers.h
        goto-programs/remove_instanceof.cpp
        goto-programs/remove_instanceof.h
        goto-programs/remove_returns.cpp
        goto-programs/remove_returns.h
        goto-programs/remove_skip.cpp
        goto-programs/remove_skip.h
        goto-programs/remove_static_init_loops.cpp
        goto-programs/remove_static_init_loops.h
        goto-programs/remove_unreachable.cpp
        goto-programs/remove_unreachable.h
        goto-programs/remove_unused_functions.cpp
        goto-programs/remove_unused_functions.h
        goto-programs/remove_vector.cpp
        goto-programs/remove_vector.h
        goto-programs/remove_virtual_functions.cpp
        goto-programs/remove_virtual_functions.h
        goto-programs/safety_checker.cpp
        goto-programs/safety_checker.h
        goto-programs/set_properties.cpp
        goto-programs/set_properties.h
        goto-programs/show_goto_functions.cpp
        goto-programs/show_goto_functions.h
        goto-programs/show_goto_functions_json.cpp
        goto-programs/show_goto_functions_json.h
        goto-programs/show_goto_functions_xml.cpp
        goto-programs/show_goto_functions_xml.h
        goto-programs/show_properties.cpp
        goto-programs/show_properties.h
        goto-programs/show_symbol_table.cpp
        goto-programs/show_symbol_table.h
        goto-programs/slice_global_inits.cpp
        goto-programs/slice_global_inits.h
        goto-programs/string_abstraction.cpp
        goto-programs/string_abstraction.h
        goto-programs/string_instrumentation.cpp
        goto-programs/string_instrumentation.h
        goto-programs/vcd_goto_trace.cpp
        goto-programs/vcd_goto_trace.h
        goto-programs/wp.cpp
        goto-programs/wp.h
        goto-programs/write_goto_binary.cpp
        goto-programs/write_goto_binary.h
        goto-programs/xml_goto_trace.cpp
        goto-programs/xml_goto_trace.h
        goto-symex/adjust_float_expressions.cpp
        goto-symex/adjust_float_expressions.h
        goto-symex/auto_objects.cpp
        goto-symex/build_goto_trace.cpp
        goto-symex/build_goto_trace.h
        goto-symex/goto_symex.cpp
        goto-symex/goto_symex.h
        goto-symex/goto_symex_state.cpp
        goto-symex/goto_symex_state.h
        goto-symex/memory_model.cpp
        goto-symex/memory_model.h
        goto-symex/memory_model_pso.cpp
        goto-symex/memory_model_pso.h
        goto-symex/memory_model_sc.cpp
        goto-symex/memory_model_sc.h
        goto-symex/memory_model_tso.cpp
        goto-symex/memory_model_tso.h
        goto-symex/partial_order_concurrency.cpp
        goto-symex/partial_order_concurrency.h
        goto-symex/postcondition.cpp
        goto-symex/postcondition.h
        goto-symex/precondition.cpp
        goto-symex/precondition.h
        goto-symex/rewrite_union.cpp
        goto-symex/rewrite_union.h
        goto-symex/slice.cpp
        goto-symex/slice.h
        goto-symex/slice_by_trace.cpp
        goto-symex/slice_by_trace.h
        goto-symex/symex_assign.cpp
        goto-symex/symex_atomic_section.cpp
        goto-symex/symex_builtin_functions.cpp
        goto-symex/symex_catch.cpp
        goto-symex/symex_clean_expr.cpp
        goto-symex/symex_dead.cpp
        goto-symex/symex_decl.cpp
        goto-symex/symex_dereference.cpp
        goto-symex/symex_dereference_state.cpp
        goto-symex/symex_dereference_state.h
        goto-symex/symex_function_call.cpp
        goto-symex/symex_goto.cpp
        goto-symex/symex_main.cpp
        goto-symex/symex_other.cpp
        goto-symex/symex_slice_class.h
        goto-symex/symex_start_thread.cpp
        goto-symex/symex_target.cpp
        goto-symex/symex_target.h
        goto-symex/symex_target_equation.cpp
        goto-symex/symex_target_equation.h
        goto-symex/symex_throw.cpp
        #java_bytecode/bytecode_info.cpp
        #java_bytecode/bytecode_info.h
        #java_bytecode/character_refine_preprocess.cpp
        #java_bytecode/character_refine_preprocess.h
        #java_bytecode/ci_lazy_methods.cpp
        #java_bytecode/ci_lazy_methods.h
        #java_bytecode/expr2java.cpp
        #java_bytecode/expr2java.h
        #java_bytecode/jar_file.cpp
        #java_bytecode/jar_file.h
        #java_bytecode/java_bytecode_convert_class.cpp
        #java_bytecode/java_bytecode_convert_class.h
        #java_bytecode/java_bytecode_convert_method.cpp
        #java_bytecode/java_bytecode_convert_method.h
        #java_bytecode/java_bytecode_convert_method_class.h
        #java_bytecode/java_bytecode_internal_additions.cpp
        #java_bytecode/java_bytecode_internal_additions.h
        #java_bytecode/java_bytecode_language.cpp
        #java_bytecode/java_bytecode_language.h
        #java_bytecode/java_bytecode_parse_tree.cpp
        #java_bytecode/java_bytecode_parse_tree.h
        #java_bytecode/java_bytecode_parser.cpp
        #java_bytecode/java_bytecode_parser.h
        #java_bytecode/java_bytecode_typecheck.cpp
        #java_bytecode/java_bytecode_typecheck.h
        #java_bytecode/java_bytecode_typecheck_code.cpp
        #java_bytecode/java_bytecode_typecheck_expr.cpp
        #java_bytecode/java_bytecode_typecheck_type.cpp
        #java_bytecode/java_bytecode_vtable.cpp
        #java_bytecode/java_bytecode_vtable.h
        #java_bytecode/java_class_loader.cpp
        #java_bytecode/java_class_loader.h
        #java_bytecode/java_class_loader_limit.cpp
        #java_bytecode/java_class_loader_limit.h
        #java_bytecode/java_entry_point.cpp
        #java_bytecode/java_entry_point.h
        #java_bytecode/java_local_variable_table.cpp
        #java_bytecode/java_object_factory.cpp
        #java_bytecode/java_object_factory.h
        #java_bytecode/java_pointer_casts.cpp
        #java_bytecode/java_pointer_casts.h
        #java_bytecode/java_root_class.cpp
        #java_bytecode/java_root_class.h
        #java_bytecode/java_types.cpp
        #java_bytecode/java_types.h
        #java_bytecode/java_utils.cpp
        #java_bytecode/java_utils.h
        #jsil/expr2jsil.cpp
        #jsil/expr2jsil.h
        #jsil/jsil_convert.cpp
        #jsil/jsil_convert.h
        #jsil/jsil_entry_point.cpp
        #jsil/jsil_entry_point.h
        #jsil/jsil_internal_additions.cpp
        #jsil/jsil_internal_additions.h
        #jsil/jsil_language.cpp
        #jsil/jsil_language.h
        #jsil/jsil_lex.yy.cpp
        #jsil/jsil_parse_tree.cpp
        #jsil/jsil_parse_tree.h
        #jsil/jsil_parser.cpp
        #jsil/jsil_parser.h
        #jsil/jsil_typecheck.cpp
        #jsil/jsil_typecheck.h
        #jsil/jsil_types.cpp
        #jsil/jsil_types.h
        #jsil/jsil_y.tab.cpp
        #jsil/jsil_y.tab.h
        #json/json_lex.yy.cpp
        #json/json_parser.cpp
        #json/json_parser.h
        #json/json_y.tab.cpp
        #json/json_y.tab.h
        langapi/language_ui.cpp
        langapi/language_ui.h
        langapi/language_util.cpp
        langapi/language_util.h
        langapi/languages.cpp
        langapi/languages.h
        langapi/mode.cpp
        langapi/mode.h
        linking/linking.cpp
        linking/linking.h
        linking/linking_class.h
        linking/remove_internal_symbols.cpp
        linking/remove_internal_symbols.h
        linking/static_lifetime_init.cpp
        linking/static_lifetime_init.h
        linking/zero_initializer.cpp
        linking/zero_initializer.h
        #memory-models/mm2cpp.cpp
        #memory-models/mm2cpp.h
        #memory-models/mm_parser.cpp
        #memory-models/mm_parser.h
        #memory-models/mmcc_main.cpp
        #memory-models/mmcc_parse_options.cpp
        #memory-models/mmcc_parse_options.h
        #miniz/miniz.cpp
        #miniz/miniz.h
        #musketeer/cycles_visitor.cpp
        #musketeer/cycles_visitor.h
        #musketeer/fence_assert.cpp
        #musketeer/fence_assert.h
        #musketeer/fence_inserter.cpp
        #musketeer/fence_inserter.h
        #musketeer/fence_shared.cpp
        #musketeer/fence_shared.h
        #musketeer/fence_user_def.cpp
        #musketeer/fence_user_def.h
        #musketeer/fencer.cpp
        #musketeer/fencer.h
        #musketeer/graph_visitor.cpp
        #musketeer/graph_visitor.h
        #musketeer/ilp.h
        #musketeer/infer_mode.h
        #musketeer/languages.cpp
        #musketeer/musketeer_main.cpp
        #musketeer/musketeer_parse_options.cpp
        #musketeer/musketeer_parse_options.h
        #musketeer/pensieve.cpp
        #musketeer/pensieve.h
        #musketeer/propagate_const_function_pointers.cpp
        #musketeer/propagate_const_function_pointers.h
        #musketeer/replace_async.h
        #musketeer/version.h
        #path-symex/build_goto_trace.cpp
        #path-symex/build_goto_trace.h
        #path-symex/loc_ref.h
        #path-symex/locs.cpp
        #path-symex/locs.h
        #path-symex/path_replay.cpp
        #path-symex/path_replay.h
        #path-symex/path_symex.cpp
        #path-symex/path_symex.h
        #path-symex/path_symex_class.h
        #path-symex/path_symex_history.cpp
        #path-symex/path_symex_history.h
        #path-symex/path_symex_state.cpp
        #path-symex/path_symex_state.h
        #path-symex/path_symex_state_read.cpp
        #path-symex/var_map.cpp
        #path-symex/var_map.h
        pointer-analysis/add_failed_symbols.cpp
        pointer-analysis/add_failed_symbols.h
        pointer-analysis/dereference.cpp
        pointer-analysis/dereference.h
        pointer-analysis/dereference_callback.cpp
        pointer-analysis/dereference_callback.h
        pointer-analysis/goto_program_dereference.cpp
        pointer-analysis/goto_program_dereference.h
        pointer-analysis/object_numbering.h
        pointer-analysis/pointer_offset_sum.cpp
        pointer-analysis/pointer_offset_sum.h
        pointer-analysis/rewrite_index.cpp
        pointer-analysis/rewrite_index.h
        pointer-analysis/show_value_sets.cpp
        pointer-analysis/show_value_sets.h
        pointer-analysis/value_set.cpp
        pointer-analysis/value_set.h
        pointer-analysis/value_set_analysis.cpp
        pointer-analysis/value_set_analysis.h
        pointer-analysis/value_set_analysis_fi.cpp
        pointer-analysis/value_set_analysis_fi.h
        pointer-analysis/value_set_analysis_fivr.cpp
        pointer-analysis/value_set_analysis_fivr.h
        pointer-analysis/value_set_analysis_fivrns.cpp
        pointer-analysis/value_set_analysis_fivrns.h
        pointer-analysis/value_set_dereference.cpp
        pointer-analysis/value_set_dereference.h
        pointer-analysis/value_set_domain.cpp
        pointer-analysis/value_set_domain.h
        pointer-analysis/value_set_domain_fi.cpp
        pointer-analysis/value_set_domain_fi.h
        pointer-analysis/value_set_domain_fivr.cpp
        pointer-analysis/value_set_domain_fivr.h
        pointer-analysis/value_set_domain_fivrns.cpp
        pointer-analysis/value_set_domain_fivrns.h
        pointer-analysis/value_set_fi.cpp
        pointer-analysis/value_set_fi.h
        pointer-analysis/value_set_fivr.cpp
        pointer-analysis/value_set_fivr.h
        pointer-analysis/value_set_fivrns.cpp
        pointer-analysis/value_set_fivrns.h
        pointer-analysis/value_sets.h
        #solvers/cvc/cvc_conv.cpp
        #solvers/cvc/cvc_conv.h
        #solvers/cvc/cvc_dec.cpp
        #solvers/cvc/cvc_dec.h
        #solvers/cvc/cvc_prop.cpp
        #solvers/cvc/cvc_prop.h
        #solvers/dplib/dplib_conv.cpp
        #solvers/dplib/dplib_conv.h
        #solvers/dplib/dplib_dec.cpp
        #solvers/dplib/dplib_dec.h
        #solvers/dplib/dplib_prop.cpp
        #solvers/dplib/dplib_prop.h
        solvers/flattening/arrays.cpp
        solvers/flattening/arrays.h
        solvers/flattening/boolbv.cpp
        solvers/flattening/boolbv.h
        solvers/flattening/boolbv_abs.cpp
        solvers/flattening/boolbv_add_sub.cpp
        solvers/flattening/boolbv_array.cpp
        solvers/flattening/boolbv_array_of.cpp
        solvers/flattening/boolbv_bitwise.cpp
        solvers/flattening/boolbv_bv_rel.cpp
        solvers/flattening/boolbv_byte_extract.cpp
        solvers/flattening/boolbv_byte_update.cpp
        solvers/flattening/boolbv_case.cpp
        solvers/flattening/boolbv_complex.cpp
        solvers/flattening/boolbv_concatenation.cpp
        solvers/flattening/boolbv_cond.cpp
        solvers/flattening/boolbv_constant.cpp
        solvers/flattening/boolbv_constraint_select_one.cpp
        solvers/flattening/boolbv_div.cpp
        solvers/flattening/boolbv_equality.cpp
        solvers/flattening/boolbv_extractbit.cpp
        solvers/flattening/boolbv_extractbits.cpp
        solvers/flattening/boolbv_floatbv_op.cpp
        solvers/flattening/boolbv_get.cpp
        solvers/flattening/boolbv_ieee_float_rel.cpp
        solvers/flattening/boolbv_if.cpp
        solvers/flattening/boolbv_index.cpp
        solvers/flattening/boolbv_map.cpp
        solvers/flattening/boolbv_map.h
        solvers/flattening/boolbv_member.cpp
        solvers/flattening/boolbv_mod.cpp
        solvers/flattening/boolbv_mult.cpp
        solvers/flattening/boolbv_not.cpp
        solvers/flattening/boolbv_onehot.cpp
        solvers/flattening/boolbv_overflow.cpp
        solvers/flattening/boolbv_power.cpp
        solvers/flattening/boolbv_quantifier.cpp
        solvers/flattening/boolbv_reduction.cpp
        solvers/flattening/boolbv_replication.cpp
        solvers/flattening/boolbv_shift.cpp
        solvers/flattening/boolbv_struct.cpp
        solvers/flattening/boolbv_type.cpp
        solvers/flattening/boolbv_type.h
        solvers/flattening/boolbv_typecast.cpp
        solvers/flattening/boolbv_unary_minus.cpp
        solvers/flattening/boolbv_union.cpp
        solvers/flattening/boolbv_update.cpp
        solvers/flattening/boolbv_vector.cpp
        solvers/flattening/boolbv_width.cpp
        solvers/flattening/boolbv_width.h
        solvers/flattening/boolbv_with.cpp
        #solvers/flattening/bv_minimize.cpp
        #solvers/flattening/bv_minimize.h
        solvers/flattening/bv_pointers.cpp
        solvers/flattening/bv_pointers.h
        solvers/flattening/bv_utils.cpp
        solvers/flattening/bv_utils.h
        solvers/flattening/c_bit_field_replacement_type.cpp
        solvers/flattening/c_bit_field_replacement_type.h
        solvers/flattening/equality.cpp
        solvers/flattening/equality.h
        solvers/flattening/flatten_byte_operators.cpp
        solvers/flattening/flatten_byte_operators.h
        solvers/flattening/functions.cpp
        solvers/flattening/functions.h
        solvers/flattening/pointer_logic.cpp
        solvers/flattening/pointer_logic.h
        #solvers/floatbv/float_approximation.cpp
        #solvers/floatbv/float_approximation.h
        #solvers/floatbv/float_bv.cpp
        #solvers/floatbv/float_bv.h
        solvers/floatbv/float_utils.cpp
        solvers/floatbv/float_utils.h
        #solvers/miniBDD/example.cpp
        #solvers/miniBDD/miniBDD.cpp
        #solvers/miniBDD/miniBDD.h
        solvers/prop/aig.cpp
        solvers/prop/aig.h
        solvers/prop/aig_prop.cpp
        solvers/prop/aig_prop.h
        #solvers/prop/bdd_expr.cpp
        #solvers/prop/bdd_expr.h
        solvers/prop/cover_goals.cpp
        solvers/prop/cover_goals.h
        solvers/prop/literal.cpp
        solvers/prop/literal.h
        solvers/prop/literal_expr.h
        solvers/prop/minimize.cpp
        solvers/prop/minimize.h
        solvers/prop/prop.cpp
        solvers/prop/prop.h
        solvers/prop/prop_assignment.cpp
        solvers/prop/prop_assignment.h
        solvers/prop/prop_conv.cpp
        solvers/prop/prop_conv.h
        solvers/prop/prop_conv_store.cpp
        solvers/prop/prop_conv_store.h
        solvers/prop/prop_wrapper.h
        #solvers/qbf/qbf_bdd_core.cpp
        #solvers/qbf/qbf_bdd_core.h
        #solvers/qbf/qbf_core.h
        #solvers/qbf/qbf_quantor.cpp
        #solvers/qbf/qbf_quantor.h
        #solvers/qbf/qbf_qube.cpp
        #solvers/qbf/qbf_qube.h
        #solvers/qbf/qbf_qube_core.cpp
        #solvers/qbf/qbf_qube_core.h
        #solvers/qbf/qbf_skizzo.cpp
        #solvers/qbf/qbf_skizzo.h
        #solvers/qbf/qbf_skizzo_core.cpp
        #solvers/qbf/qbf_skizzo_core.h
        #solvers/qbf/qbf_squolem.cpp
        #solvers/qbf/qbf_squolem.h
        #solvers/qbf/qbf_squolem_core.cpp
        #solvers/qbf/qbf_squolem_core.h
        #solvers/qbf/qdimacs_cnf.cpp
        #solvers/qbf/qdimacs_cnf.h
        #solvers/qbf/qdimacs_core.cpp
        #solvers/qbf/qdimacs_core.h
        #solvers/refinement/bv_refinement.h
        #solvers/refinement/bv_refinement_loop.cpp
        #solvers/refinement/refine_arithmetic.cpp
        #solvers/refinement/refine_arrays.cpp
        #solvers/refinement/refined_string_type.cpp
        #solvers/refinement/refined_string_type.h
        #solvers/refinement/string_constraint.h
        #solvers/refinement/string_constraint_generator.h
        #solvers/refinement/string_constraint_generator_code_points.cpp
        #solvers/refinement/string_constraint_generator_comparison.cpp
        #solvers/refinement/string_constraint_generator_concat.cpp
        #solvers/refinement/string_constraint_generator_constants.cpp
        #solvers/refinement/string_constraint_generator_indexof.cpp
        #solvers/refinement/string_constraint_generator_insert.cpp
        #solvers/refinement/string_constraint_generator_main.cpp
        #solvers/refinement/string_constraint_generator_testing.cpp
        #solvers/refinement/string_constraint_generator_transformation.cpp
        #solvers/refinement/string_constraint_generator_valueof.cpp
        #solvers/refinement/string_refinement.cpp
        #solvers/refinement/string_refinement.h
        solvers/sat/cnf.cpp
        solvers/sat/cnf.h
        #solvers/sat/cnf_clause_list.cpp
        #solvers/sat/cnf_clause_list.h
        #solvers/sat/dimacs_cnf.cpp
        #solvers/sat/dimacs_cnf.h
        #solvers/sat/pbs_dimacs_cnf.cpp
        #solvers/sat/pbs_dimacs_cnf.h
        #solvers/sat/read_dimacs_cnf.cpp
        #solvers/sat/read_dimacs_cnf.h
        #solvers/sat/resolution_proof.cpp
        #solvers/sat/resolution_proof.h
        #solvers/sat/satcheck.cpp
        #solvers/sat/satcheck.h
        #solvers/sat/satcheck_booleforce.cpp
        #solvers/sat/satcheck_booleforce.h
        #solvers/sat/satcheck_core.h
        #solvers/sat/satcheck_glucose.cpp
        #solvers/sat/satcheck_glucose.h
        #solvers/sat/satcheck_limmat.cpp
        #solvers/sat/satcheck_limmat.h
        #solvers/sat/satcheck_lingeling.cpp
        #solvers/sat/satcheck_lingeling.h
        #solvers/sat/satcheck_minisat.cpp
        #solvers/sat/satcheck_minisat.h
        #solvers/sat/satcheck_minisat2.cpp
        #solvers/sat/satcheck_minisat2.h
        #solvers/sat/satcheck_picosat.cpp
        #solvers/sat/satcheck_picosat.h
        #solvers/sat/satcheck_precosat.cpp
        #solvers/sat/satcheck_precosat.h
        #solvers/sat/satcheck_smvsat.cpp
        #solvers/sat/satcheck_smvsat.h
        #solvers/sat/satcheck_zchaff.cpp
        #solvers/sat/satcheck_zchaff.h
        #solvers/sat/satcheck_zcore.cpp
        #solvers/sat/satcheck_zcore.h
        #solvers/smt1/smt1_conv.cpp
        #solvers/smt1/smt1_conv.h
        #solvers/smt1/smt1_dec.cpp
        #solvers/smt1/smt1_dec.h
        #solvers/smt1/smt1_prop.cpp
        #solvers/smt1/smt1_prop.h
        #solvers/smt2/smt2_conv.cpp
        #solvers/smt2/smt2_conv.h
        #solvers/smt2/smt2_dec.cpp
        #solvers/smt2/smt2_dec.h
        #solvers/smt2/smt2_parser.cpp
        #solvers/smt2/smt2_parser.h
        #solvers/smt2/smt2_prop.cpp
        #solvers/smt2/smt2_prop.h
        #solvers/smt2/smt2irep.cpp
        #solvers/smt2/smt2irep.h
        #symex/path_search.cpp
        #symex/path_search.h
        #symex/symex_cover.cpp
        #symex/symex_main.cpp
        #symex/symex_parse_options.cpp
        #symex/symex_parse_options.h
        util/arith_tools.cpp
        util/arith_tools.h
        util/array_name.cpp
        util/array_name.h
        util/base_type.cpp
        util/base_type.h
        util/bv_arithmetic.cpp
        util/bv_arithmetic.h
        util/byte_operators.cpp
        util/byte_operators.h
        util/c_types.cpp
        util/c_types.h
        util/cmdline.cpp
        util/cmdline.h
        util/config.cpp
        util/config.h
        util/cout_message.cpp
        util/cout_message.h
        util/cprover_prefix.h
        util/decision_procedure.cpp
        util/decision_procedure.h
        util/dstring.cpp
        util/dstring.h
        util/endianness_map.cpp
        util/endianness_map.h
        util/error.h
        util/expanding_vector.h
        util/expr.cpp
        util/expr.h
        util/expr_util.cpp
        util/expr_util.h
        util/file_util.cpp
        util/file_util.h
        util/find_macros.cpp
        util/find_macros.h
        util/find_symbols.cpp
        util/find_symbols.h
        util/fixedbv.cpp
        util/fixedbv.h
        util/format_constant.cpp
        util/format_constant.h
        util/format_spec.h
        util/fresh_symbol.cpp
        util/fresh_symbol.h
        util/get_base_name.cpp
        util/get_base_name.h
        util/get_module.cpp
        util/get_module.h
        util/graph.cpp
        util/graph.h
        util/guard.cpp
        util/guard.h
        util/identifier.cpp
        util/identifier.h
        util/ieee_float.cpp
        util/ieee_float.h
        util/infix.h
        util/irep.cpp
        util/irep.h
        util/irep_hash.cpp
        util/irep_hash.h
        util/irep_hash_container.cpp
        util/irep_hash_container.h
        util/irep_ids.cpp
        util/irep_ids.h
        util/irep_serialization.cpp
        util/irep_serialization.h
        util/json.cpp
        util/json.h
        util/json_expr.cpp
        util/json_expr.h
        util/json_irep.cpp
        util/json_irep.h
        util/language.cpp
        util/language.h
        util/language_file.cpp
        util/language_file.h
        util/lispexpr.cpp
        util/lispexpr.h
        util/lispirep.cpp
        util/lispirep.h
        util/memory_info.cpp
        util/memory_info.h
        util/merge_irep.cpp
        util/merge_irep.h
        util/message.cpp
        util/message.h
        util/mp_arith.cpp
        util/mp_arith.h
        util/namespace.cpp
        util/namespace.h
        util/numbering.h
        util/options.cpp
        util/options.h
        util/parse_options.cpp
        util/parse_options.h
        util/parser.cpp
        util/parser.h
        util/pipe_stream.cpp
        util/pipe_stream.h
        util/pointer_offset_size.cpp
        util/pointer_offset_size.h
        util/pointer_predicates.cpp
        util/pointer_predicates.h
        util/prefix.h
        util/preprocessor.h
        util/rational.cpp
        util/rational.h
        util/rational_tools.cpp
        util/rational_tools.h
        util/ref_expr_set.cpp
        util/ref_expr_set.h
        util/reference_counting.h
        util/rename.cpp
        util/rename.h
        util/rename_symbol.cpp
        util/rename_symbol.h
        util/replace_expr.cpp
        util/replace_expr.h
        util/replace_symbol.cpp
        util/replace_symbol.h
        util/run.cpp
        util/run.h
        util/safe_pointer.h
        util/sharing_map.h
        util/sharing_node.h
        util/signal_catcher.cpp
        util/signal_catcher.h
        util/simplify_expr.cpp
        util/simplify_expr.h
        util/simplify_expr_array.cpp
        util/simplify_expr_boolean.cpp
        util/simplify_expr_class.h
        util/simplify_expr_floatbv.cpp
        util/simplify_expr_int.cpp
        util/simplify_expr_pointer.cpp
        util/simplify_expr_struct.cpp
        util/simplify_utils.cpp
        util/simplify_utils.h
        util/sorted_vector.h
        util/source_location.cpp
        util/source_location.h
        util/ssa_expr.cpp
        util/ssa_expr.h
        util/std_code.cpp
        util/std_code.h
        util/std_expr.cpp
        util/std_expr.h
        util/std_types.cpp
        util/std_types.h
        util/string2int.cpp
        util/string2int.h
        util/string_container.cpp
        util/string_container.h
        util/string_expr.h
        util/string_hash.cpp
        util/string_hash.h
        util/string_utils.cpp
        util/string_utils.h
        util/substitute.cpp
        util/substitute.h
        util/suffix.h
        util/symbol.cpp
        util/symbol.h
        util/symbol_table.cpp
        util/symbol_table.h
        util/tempdir.cpp
        util/tempdir.h
        util/tempfile.cpp
        util/tempfile.h
        util/threeval.cpp
        util/threeval.h
        util/time_stopping.cpp
        util/time_stopping.h
        util/timer.cpp
        util/timer.h
        util/type.cpp
        util/type.h
        util/type_eq.cpp
        util/type_eq.h
        util/typecheck.cpp
        util/typecheck.h
        util/ui_message.cpp
        util/ui_message.h
        util/unicode.cpp
        util/unicode.h
        util/union_find.cpp
        util/union_find.h
        util/xml.cpp
        util/xml.h
        util/xml_expr.cpp
        util/xml_expr.h
        util/xml_irep.cpp
        util/xml_irep.h
        xmllang/graphml.cpp
        xmllang/graphml.h
        xmllang/xml_lex.yy.cpp
        xmllang/xml_parse_tree.cpp
        xmllang/xml_parse_tree.h
        xmllang/xml_parser.cpp
        xmllang/xml_parser.h
        xmllang/xml_y.tab.cpp
        xmllang/xml_y.tab.h
        )

add_library(cprover OBJECT ${SOURCE_FILES})

add_subdirectory(funfrog)

